Actualización de estilos y contenido

--- a/index.html
+++ b/index.html
@@ -31,9 +31,12 @@
         <h1>Titulo Página</h1>
     </main>
 
-    <footer class="footer seccion">
-        <div class="contenedor footer">
-            <p>Siguenos en Nuestras redes Sociales</p>
+ <footer class="footer seccion">
+    <div class="contenedor-footer">
+
+        <div class="footer-top">
+            <div class="redes">
+                <p>Síguenos en nuestras redes sociales</p>
                 <div class="redes-sociales">
                     <a href="https://www.facebook.com/tu_pagina" target="_blank" class="facebook">
                         <i class="fab fa-facebook-f"></i>
@@ -41,22 +44,26 @@
                     <a href="https://www.instagram.com/tu_usuario" target="_blank" class="instagram">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a href="https://wa.me/573001234567" target="_blank" class="whatsapp">
+                    <a href="https://wa.me/573207664475" target="_blank" class="whatsapp">
                         <i class="fab fa-whatsapp"></i>
                     </a>
-                 </div>
+                </div>
+            </div>
 
-                <nav class="navegacion">
-                    <a href="nosotros.html">Nosotros</a>
-                    <a href="proyectos.html">Proyectos</a>
-                    <a href="Contacto.html">Contacto</a>
-                    <!-- <a href=""></a> -->
-                </nav> 
-
+            <nav class="navegacion">
+                <a href="nosotros.html">Nosotros</a>
+                <a href="proyectos.html">Proyectos</a>
+                <a href="Contacto.html">Contacto</a>
+            </nav>
         </div>
-        <p class="copyringht">Todos los Derechos Reservados 2026 &copy; </p>
 
-    </footer>
+        <p class="copyright">
+            Todos los Derechos Reservados 2026 &copy;
+        </p>
+
+    </div>
+</footer>
+
 
     <script src="build/js/bundle.min.js"></script>
 </body>
