--- a/contacto.html
+++ b/contacto.html
@@ -28,7 +28,7 @@
         </div>
     </header>
     <main class="contenedor seccion">
-        <h1>Titulo Página</h1>
+        <h1>Contacto</h1>
     </main>
 
  <footer class="footer seccion">
