Se crea el header con una imagen

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <header class="header">
+    <header class="header inicio">
         <div class="contenedor contenido-header">
             <div class="barra">
                 <a href="/">
@@ -23,7 +23,7 @@
                     <!-- <a href=""></a> -->
                 </nav>
             </div> <!--Barra-->
-            <h1>Inmobiliaria y Constructora San Miguel</h1>
+            <!-- <h1>Inmobiliaria y Constructora San Miguel</h1> -->
 
         </div>
     </header>
