Actualización de estilos y contenido

--- a/nosotros.html
+++ b/nosotros.html
@@ -10,8 +10,8 @@
 
 </head>
 <body>
-    <header class="header">
-        <div class="contenedor contenido-header">
+     <header class="nosotros inicio">
+        <div class="contenedor contenido-nosotros">
             <div class="barra">
                 <a href="/">
                  <img src="build/img/lgsan.png" alt="Logo san miguel">
@@ -23,10 +23,11 @@
                     <!-- <a href=""></a> -->
                 </nav>
             </div> <!--Barra-->
-            <h1>Inmobiliaria y Constructora San Miguel</h1>
+            <!-- <h1>Inmobiliaria y Constructora San Miguel</h1> -->
 
         </div>
     </header>
+
     <main class="contenedor seccion">
         <h1>Nosotros</h1>
     </main>
