--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="header inicio">
-        <div class="contenedor contenido-header">
+        <div class="contenedor contenido-header"> 
             <div class="barra">
                 <a href="/">
                  <img src="build/img/lgsan.png" alt="Logo san miguel">
@@ -23,13 +23,71 @@
                     <!-- <a href=""></a> -->
                 </nav>
             </div> <!--Barra-->
-            <!-- <h1>Inmobiliaria y Constructora San Miguel</h1> -->
+            <h1>Inmobiliaria y Constructora San Miguel</h1>
 
         </div>
     </header>
-    <main class="contenedor seccion">
-        <h1>Titulo Página</h1>
+        <main class="contenedor seccion">
+        <h1>Más Sobre Nosotros</h1>
+ 
+        <div class="iconos-nosotros">
+            <div class="icono">
+                <img src="build/img/icono1.svg" alt="Icono seguridad" loading="lazy">
+                <h3>Seguridad</h3>
+                <p>Possimus, suscipit repudiandae. Autem deserunt aliquid deleniti sit minus consectetur obcaecati molestiae dolorem natus dolores reiciendis tempore, explicabo cum nobis laudantium. Voluptates?</p>
+            </div>
+            <div class="icono">
+                <img src="build/img/icono2.svg" alt="Icono Precio" loading="lazy">
+                <h3>Precio</h3>
+                <p>Possimus, suscipit repudiandae. Autem deserunt aliquid deleniti sit minus consectetur obcaecati molestiae dolorem natus dolores reiciendis tempore, explicabo cum nobis laudantium. Voluptates?</p>
+            </div>
+            <div class="icono">
+                <img src="build/img/icono3.svg" alt="Icono Tiempo" loading="lazy">
+                <h3>A Tiempo</h3>
+                <p>Possimus, suscipit repudiandae. Autem deserunt aliquid deleniti sit minus consectetur obcaecati molestiae dolorem natus dolores reiciendis tempore, explicabo cum nobis laudantium. Voluptates?</p>
+            </div>
+        </div>
     </main>
+
+    <section class="seccion contenedor">
+        <h2>Proyectos de Exitos</h2>
+
+        <div class="contenedor-proyectos">
+            <div class="proyecto">
+                <picture>
+                    <source srcset="build/img/logonativo.webp" type="image/webp">
+                    <source srcset="build/img/logonativo.jpg" type="image/jpg">
+                    <img loading="lazy" src="build/img/logonativo.png" alt="anuncio">
+                </picture>
+                <div class="contenido-proyecto">
+                    <h3>Residencia Nativo</h3>
+                    <p>
+                        Possimus, suscipit repudiandae. Autem deserunt aliquid deleniti sit minus consectetur obcaecati molestiae dolorem natus dolores reiciendis tempore, explicabo cum nobis laudantium. Voluptates?
+                    </p>
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
+                            <p>3</p>
+                        </li>
+                         <li>
+                            <img loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                            <p>1</p>
+                        </li>
+                         <li>
+                            <img loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono dormitorio">
+                            <p>3</p>
+                        </li>
+
+                    </ul>
+                    <a href="">Contactar</a>
+
+
+                </div>
+            </div>
+
+        </div>
+
+    </section>
 
  <footer class="footer seccion">
     <div class="contenedor-footer">
